# Grimore-MD

./: .env.example  .gitignore  CHANGELOG.md  README.md  SHELL_REDESIGN.md  grimoire.toml  grimore.toml  pyproject.toml  requirements.txt  road_map_grimoire_v2.md
.github/workflows/: ci.yml
docs/: MULTIFORMAT_BLUEPRINT.md  USER_GUIDE_EN.md  USER_GUIDE_ES.md  mcp-setup.md
eval/: AGENTS.md  grimore_golden.yaml
grimoire/: __main__.py  cli.py  daemon.py  operations.py  session.py  shell.py
grimoire/cognition/: chronicler.py  chunker.py  claims.py  connector.py  embedder.py  llm_router.py  mirror.py  oracle.py  synthesizer.py  tagger.py
grimoire/cognition/prompts/: oracle.txt  tagger.txt
grimoire/ingest/: observer.py  parser.py
grimoire/memory/: db.py  maintenance.py  taxonomy.py
grimoire/output/: frontmatter_writer.py  git_guard.py  link_injector.py
grimoire/utils/: atomic.py  backup.py  config.py  hashing.py  http.py  logger.py  notifications.py  paths.py  preflight.py  security.py  system.py  ui.py
grimore/: __init__.py  __main__.py  cli.py  daemon.py  mcp_server.py  operations.py  session.py  shell.py
grimore/api/: __init__.py  app.py
grimore/api/static/: app.js  grimore.css
grimore/api/templates/: index.html
grimore/cognition/: chronicler.py  chunker.py  claims.py  connector.py  dedupe.py  embedder.py  eval.py  graph.py  llm_router.py  mirror.py  oracle.py  reembed.py  reranker.py  synthesizer.py  tagger.py
grimore/cognition/llm_backends/: __init__.py  ollama.py  openai.py
grimore/cognition/prompts/: oracle.txt  tagger.txt
grimore/ingest/: observer.py  parser.py  sniffer.py
grimore/ingest/adapters/: __init__.py  base.py  doc.py  docx.py  epub.py  html.py  markdown.py  odt.py  pdf.py  registry.py  rtf.py  safexml.py  txt.py
grimore/memory/: _base.py  chunks.py  db.py  embedding_migration.py  freshness.py  maintenance.py  mirror_store.py  notes.py  schema.py  search.py  tags.py  taxonomy.py  upkeep.py
grimore/output/: frontmatter_writer.py  git_guard.py  link_injector.py
grimore/utils/: atomic.py  backup.py  config.py  event_log.py  hashing.py  http.py  logger.py  notifications.py  paths.py  preflight.py  security.py  system.py  ui.py
tests/: test_adapter_dispatch.py  test_adapters_phase2.py  test_adapters_phase3.py  test_adapters_phase4.py  test_api.py  test_chronicler.py  test_chunker_semantic.py  test_claims.py  test_cli.py  test_config.py  test_daemon_plumbing.py  test_db_categories.py  test_db_multiformat.py  test_dedupe.py  test_e2e_oracle.py  test_embedder.py  test_eval.py  test_graph_export.py  test_http.py  test_hybrid_search.py  test_incremental_reembed.py  test_llm_backends.py  test_llm_router.py  test_maintenance.py  test_mcp_server.py  test_migrate_embeddings.py  test_mirror.py  test_oracle.py  test_parser.py  test_preflight.py  test_preflight_adapters.py  test_reranker.py  test_retrieval_upgrades.py  test_security.py  test_shell.py  test_sidecar_writer.py  test_sniffer.py  test_synthesizer.py  test_system.py  test_tagger.py  (+4 more)
