[project]
name = "grimore"
version = "2.0.0"
description = "Automated Knowledge Engine for your Markdown Vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0.0",
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "typer[all]>=0.12.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.0",
    "platformdirs>=4.0.0",
    "rapidfuzz>=3.0.0",
    # Multi-format ingest (Phase 2): TXT, HTML, DOCX adapters.
    # beautifulsoup4 falls back to stdlib html.parser when lxml is absent
    # (Termux can't always dlopen lxml's .so), so it's the only Phase 2
    # runtime add. DOCX is parsed via stdlib zipfile + xml.etree, so
    # python-docx is not required.
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
# Faster HTML/XML parsing. bs4 will auto-prefer lxml when available;
# Grimore degrades cleanly to the stdlib html.parser when it isn't.
html-fast = ["lxml>=5.1.0"]
# Richer DOCX extraction (style names, core properties). The built-in
# stdlib path covers the 90% case without any native deps.
docx-rich = ["python-docx>=1.1.0"]

[project.scripts]
grimore = "grimore.cli:app"

[tool.setuptools.packages.find]
include = ["grimore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
