[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grimore"
version = "3.2.0"
description = "Automated Knowledge Engine for your Markdown Vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0.0",
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "typer[all]>=0.12.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.0",
    "platformdirs>=4.0.0",
    "rapidfuzz>=3.0.0",
    # Vectorized retrieval: stack stored float32 vectors into one matrix and
    # score every chunk with a single matmul instead of a per-row Python loop.
    # Pure-wheel on Linux/Windows/Termux — no native build required.
    "numpy>=1.24.0",
    # Multi-format ingest: TXT, HTML, DOCX adapters.
    # beautifulsoup4 falls back to stdlib html.parser when lxml is absent
    # (Termux can't always dlopen lxml's .so), so it's the only HTML
    # runtime add. DOCX is parsed via stdlib zipfile + xml.etree, so
    # python-docx is not required.
    "beautifulsoup4>=4.12.0",
    # Multi-format ingest: PDF + EPUB adapters.
    # pypdf is pure-Python (no native compile); EPUB is parsed via stdlib
    # zipfile + xml.etree with bs4 reused for the chapter XHTML, so the
    # only new wheel is pypdf itself.
    "pypdf>=4.0.0",
    # Multi-format ingest: RTF adapter. Pure-Python, no native deps —
    # Termux-safe. ODT is parsed via stdlib (zipfile + xml.etree) and
    # .doc shells out to antiword when available, so neither adds a
    # Python dep here.
    "striprtf>=0.0.27",
    # Hardened XML parsing for the zip-container adapters (docx/odt/epub).
    # Blocks entity-expansion ("billion laughs") and XXE — audit M1.
    # Pure-Python wheel — Termux-safe, no native build.
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
# Faster HTML/XML parsing. bs4 will auto-prefer lxml when available;
# Grimore degrades cleanly to the stdlib html.parser when it isn't.
html-fast = ["lxml>=5.1.0"]
# Richer DOCX extraction (style names, core properties). The built-in
# stdlib path covers the 90% case without any native deps.
docx-rich = ["python-docx>=1.1.0"]
# Alternative PDF engines. Both are opt-in because they're heavier
# than pypdf and (in PyMuPDF's case) have a stricter licence.
pdf-plumber = ["pdfplumber>=0.11"]
# WARNING: PyMuPDF is AGPL-3.0. Only enable this extra if your usage
# is compatible with that licence.
pdf-mupdf = ["pymupdf>=1.24"]
# OCR fallback for scanned PDFs. Requires the `tesseract` and `poppler`
# binaries on PATH in addition to the Python wheels here.
ocr = ["pytesseract>=0.3", "pdf2image>=1.17"]
# Magic-byte content sniffing. Off by default; enable
# `[ingest].sniff_magic` in grimore.toml to route misnamed or
# extension-less files to the right adapter. Needs libmagic on the
# system (Linux: `apt install libmagic1`; Termux: `pkg install file`;
# Windows: install the `python-magic-bin` wheel instead).
sniff = ["python-magic>=0.4"]
# Opt-in vector backend. When installed and
# [cognition].vector_backend is "auto" (the default) or "sqlite-vec",
# the connector pushes k-NN ranking into SQLite via the sqlite-vec
# extension instead of building an in-memory numpy matrix. Worth the
# install on vaults beyond ~100k chunks; below that, the numpy path
# is faster end-to-end. Pure-wheel on Linux/Windows; Termux works when
# the stdlib `sqlite3` was built with `enable_load_extension` (most
# distributions ship it, Termux's default Python does as of 3.11).
vec = ["sqlite-vec>=0.1.0"]
# Cross-encoder re-ranker. Replaces the default LLM-rerank's
# 15-30 s/query generation with a sub-second forward pass through a
# small cross-encoder (default BAAI/bge-reranker-base, ~280 MB on first
# load). Off the install path until users opt in — sentence-transformers
# pulls in torch, which is a heavy wheel; Termux/ARM users may want to
# stay on the default "llm" engine.
reranker = ["sentence-transformers>=2.7"]
# Local HTTP API + minimal web UI. Off by default so a
# fresh install doesn't pull in fastapi/uvicorn for users who only
# need the CLI and shell. ``grimore serve`` checks for this extra at
# launch and prints the install command if missing.
serve = ["fastapi>=0.110", "uvicorn>=0.27"]
# Official MCP SDK. The shipped ``grimore mcp`` server
# implements the JSON-RPC handshake by hand and does NOT require this
# extra — declared here for a future opt-in upgrade path to the SDK's
# transport helpers and richer schema validation.
mcp = ["mcp>=0.1.0"]

[project.scripts]
grimore = "grimore.cli:app"

[tool.setuptools.packages.find]
include = ["grimore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end test that calls a real Ollama server (auto-skips when none is reachable; opt out with -m 'not e2e').",
    "vec: requires the sqlite-vec extension (auto-skips when unavailable).",
    "reranker: requires sentence-transformers (auto-skips when unavailable).",
    "serve: requires fastapi + uvicorn (auto-skips when unavailable).",
]

[tool.coverage.run]
source = ["grimore"]

[tool.coverage.report]
precision = 1
skip_empty = true
# Report-only for now — no fail_under gate until the numbers stabilise.
# Snapshot 2026-07-19: 74% total; thinnest spots are cli.py (31%),
# operations.py (49%), utils/system.py (42%), utils/backup.py (24%),
# ingest/observer.py (44%), daemon.py (53%).

[tool.ruff]
target-version = "py311"
# We don't reflow the existing hand-tuned line layout, so the formatter's
# default width is irrelevant; line-length only affects rules we opt into.
line-length = 100

[tool.ruff.lint]
# Conservative, correctness-first rollout. Deliberately omitted for now to
# avoid churning the existing layout — enable later with `ruff check --fix`:
#   E1/E2/E3 (indentation / whitespace / blank-line cosmetics)
#   E501     (line length — many lines are intentionally long)
#   I        (import sorting)
#   UP       (pyupgrade rewrites)
select = ["E4", "E7", "E9", "F", "W", "B", "C4"]
ignore = [
    "E731",  # a couple of assigned lambdas are deliberate and readable
    "B008",  # Typer takes `typer.Option(...)`/`Argument(...)` as default values
]

[tool.mypy]
# 3.12, not the 3.11 floor: current numpy stubs use PEP 695 `type`
# aliases, which mypy refuses to parse when analysing as 3.11 (hard
# abort, "errors prevented further checking"). Trade-off: mypy won't
# catch code that only breaks on 3.11 — the py3.11 test matrix job
# still covers that at runtime.
python_version = "3.12"
# Gradual rollout: mypy sees the whole package (so cross-module signatures
# are real, not Any), but only the packages re-enabled in the overrides
# below gate CI. Widen the list as modules are cleaned up; the endgame is
# deleting the blanket ignore_errors.
ignore_errors = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["grimore.memory.*", "grimore.utils.*"]
ignore_errors = false

[[tool.mypy.overrides]]
# Untyped third-party deps (no stubs published). Remove entries as
# upstream ships py.typed or a types-* package gets added to CI.
module = ["defusedxml.*", "sqlite_vec.*", "striprtf.*", "frontmatter.*"]
ignore_missing_imports = true
